--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,42 +1,159 @@
-.logo {
-  display: block;
-  text-align: center;
-  height: 25px;
-  width: 140px;
-  margin-right: 55px;
-}
-
 .container {
   position: relative;
   display: flex;
   height: 114px;
   align-items: center;
+  padding-bottom: 4px;
+  border-bottom: 1px var(--color-grayish-blue) solid;
 }
 
-.container__list {
+.logo {
+  display: block;
+  text-align: center;
+  height: 25px;
+  width: 140px;
+}
+
+.menu_button_container {
+  display: none;
+  width: 16px;
+  height: 15px;
+  margin: 0px 16px;
+  margin-bottom: -9px;
+  z-index: 3;
+}
+
+.mobile_nav {
+  display: none;
+}
+
+.navbar {
+  height: 100%;
+  margin: 0px;
+  position: 0px;
+  margin-left: 55px;
+}
+
+.menu_items_list {
   display: block;
   height: 100%;
+
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.container__list li {
+.menu_items_list li {
+  list-style: none;
   display: inline-block;
   margin-right: 30px;
   padding: 47px 0px;
 }
 
-.container__list a {
+.menu_items_list a {
   text-decoration: none;
   text-transform: capitalize;
+  color: var(--color-dark-grayish-blue);
+}
+
+.menu_items_list .active {
   color: var(--color-dark);
 }
 
-.container__list .active {
-  color: red;
+li:has(> .active) {
+  border-bottom: 4px solid var(--color-orange);
 }
 
-li:has(> .active)  {
-  border-bottom: 1px solid red;
+.right_menu_items {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  gap: 45px;
+}
+
+.user_icon_container {
+  position: relative;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: 2px solid var(--color-white);
+  transition: all 0.2s ease-out;
+}
+
+.user_icon_container:hover {
+  border: 2px solid var(--color-orange);
+}
+
+.user_icon {
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  /* cursor: pointer; */
+}
+
+.cart_icon_container {
+  cursor: pointer;
+  position: relative;
+  height: 20px;
+  width: 22px;
+}
+
+.cart_icon {
+  cursor: pointer;
+  height: 100%;
+  width: 100%;
+}
+
+@media screen and (max-width: 769px) {
+  
+  .menu_button_container {
+    display: block;
+  }
+
+  .right_menu_items {
+    gap: 20px;
+  }
+
+  .container {
+    height: 60px;
+  }
+
+  .navbar {
+    position: fixed;
+    margin: 0;
+    padding: 95px 25px 25px 25px;
+    top: 0;
+    left: -100%;
+    width: 250px;
+    height: 100%;
+    background: #fff;
+    z-index: 2;
+    transition: 0.5s;
+  }
+
+  #open {
+    left: 0;
+  }
+
+  .menu_items_list li {
+    display: block;
+    margin: 30px 0px;
+    padding: 0px;
+    font-weight: 600;
+  }
+
+  li:has(> .active) {
+    border-bottom: none;
+  }
+
+  #open + .overlay {
+    display: block;
+    background-color: rgba(146, 146, 146, 0.25) !important;
+    position: fixed  !important;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 1;
+  }
 }
