modify header menu

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,6 +4,8 @@
   left: 0;
   display: flex;
   width: 100%;
+  background-color: var(--color-white);
+  z-index: 2;
 }
 
 .header {
@@ -13,7 +15,7 @@
   display: flex;
   height: 114px;
   margin: auto;
-  padding: 0px;
+  padding: 0px 5px;
   align-items: center;
   padding-bottom: 4px;
   border-bottom: 1px var(--color-grayish-blue) solid;
