--- a/src/containers/HomePage/HomePage.module.css
+++ b/src/containers/HomePage/HomePage.module.css
@@ -9,28 +9,28 @@
 }
 
 .product_about_left {
+  position: relative;
+  padding-right: 60px;
   width: 50%;
 }
 
 .product_about_right {
   width: 50%;
-}
-
-.slider {
-  margin: 0px;
-  padding: 0px;
+  padding-left: 60px;
 }
 
 .active_slider {
   position: absolute;
   top: calc(50%- 285px);
   left: calc(50% - 225px);
+  transform: scale(1.2);
+  z-index: 3;
 }
 
 .slider_item {
   position: relative;
-  width: 450px;
-  height: 450px;
+  /* width: 450px;
+  height: 450px; */
 }
 
 .thumbnail {
@@ -42,13 +42,174 @@
   object-fit: cover;
   width: 100%;
   border-radius: 15px;
+  cursor: pointer;
 }
 
 .thumbnails_container {
   display: flex;
-  justify-content: space-between;
   margin: 0;
   margin-top: 30px;
-  width: 450px;
   height: 90px;
+}
+
+.thumbnail {
+  padding-right: 30px;
+}
+
+.thumbnail:last-child {
+  padding-right: 0px;
+}
+
+.arrows {
+  display: none;
+}
+
+.active_arrows {
+  position: absolute;
+  display: flex;
+  width: 114%;
+  left: -7%;
+  top: calc(50% - 28px);
+  justify-content: space-between;
+}
+
+.arrow {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  background-color: var(--color-white);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.close_icon {
+  display: none;
+}
+
+.active_close_icon {
+  position: absolute;
+  right: 0px;
+  top: -25px;
+  color: var(--color-white);
+  cursor: pointer;
+}
+
+.overlay {
+  display: block;
+  background-color: hsla(0, 0%, 0%, 0.78) !important;
+  position: fixed  !important;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 2;
+}
+
+/* ----- right ------ */
+
+.company_name {
+  color: var(--color-orange);
+  font-weight: 700;
+}
+
+.product_name {
+  color: var(--color-black);
+  font-weight: 700;
+}
+
+.product_description {
+  font-weight: 400;
+  color: var(--color-dark-grayish-blue);
+}
+
+.product_price {
+  display: flex;
+  align-items: center;
+}
+
+.product_price__big {
+  color: var(--color-dark);
+  font-weight: 700;
+  font-size: 24px;
+  margin: 35px 17px 0px 0px;
+}
+
+.product_price__discount {
+  padding: 4px;
+  border-radius: 5px;
+  margin-top: 35px;
+  color: var(--color-orange);
+  font-weight: 700;
+  background-color: var(--color-pale-orange); 
+}
+
+.product_price__small {
+  color: var(--color-dark-grayish-blue);
+  text-decoration: line-through;
+}
+
+.product_quantity {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  width: 155px;
+  height: 55px;
+  border-radius: 10px;
+  background-color: var(--color-light-grayish-blue);
+
+  font-weight: 700;
+}
+
+.product_action {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.next_btn {
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+
+  width: 75px;
+  height: 55px;
+  border-radius: 10px;
+  color: var(--color-orange);
+
+  font-weight: 700;
+  font-size: 25px;
+}
+
+.add_to_cart_button {
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--color-white);
+  background-color: var(--color-orange);
+  width: 275px;
+  height: 60px;
+  border-radius: 10px;
+  font-weight: 700;
+}
+
+.cart_icon {
+  width: 19px;
+  height: 18px;
+  margin-right: 15px;
 }
